--- a/.env
+++ b/.env
@@ -16,5 +16,9 @@ STRIPE_WEBHOOK_SECRET=whsec_a25ac1bdd4b244de998e777008a859af7e0e163967d74ba0a962
 RESEND_API_KEY=re_HZzqwY4e_NkxzG5yUBuPmCd1UQS929aFR
 SENDER_EMAIL=omarmode35@gmail.com
 
+
+CLOUDINARY_CLOUD_NAME=dprfoqe2j 
+CLOUDINARY_API_KEY=691797764632742
+CLOUDINARY_API_SECRET=aZ0LgaPZOtRoQQta1vpRmuSeVf0
  
 # NEXT_PUBLIC_SERVER_URL = http://localhost:3000
