--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
     "next": "^14.2.6",
+    "next-cloudinary": "^6.13.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
